# Sorter

./: .gitignore  CMakeLists.txt  README.md  alphabet.txt  build.sh  test.txt
code/: CMakeLists.txt
code/sorter_app/: CMakeLists.txt
code/sorter_app/linux/: CMakeLists.txt
code/sorter_core/: CMakeLists.txt
code/sorter_core/inc/date_lib/: date.hpp
code/sorter_core/inc/engine/: engine.hpp
code/sorter_core/inc/math/: math.hpp
code/sorter_core/inc/sort/: length_sort.hpp  name_sort.hpp  time_sort.hpp  type_sort.hpp
code/sorter_core/inc/utils/: alphabet.hpp
code/sorter_core/inc/window/: window.hpp
code/sorter_core/src/file/: file_manager.cpp
code/sorter_core/src/window/: window.cpp
code/t_app/: CMakeLists.txt  main.cpp
code/t_core/: CMakeLists.txt
code/t_core/inc/container/: container.hpp
code/t_core/inc/file/: file_manager.hpp
code/t_core/inc/interfaces/: isort.hpp
code/t_core/inc/sort/: length_sort.hpp  name_sort.hpp  time_sort.hpp  type_sort.hpp
code/t_core/inc/utils/: alphabet.hpp
code/t_core/inc/window/: window.hpp
code/t_core/src/file/: file_manager.cpp
code/t_core/src/math/: math.cpp
code/t_core/src/window/: window.cpp
